syntax = "proto3";
package tutorial;

option go_package = "github.com/ebenaum/thekeeper/proto;proto";

message EventPermission {
   string permission = 1;
   int64 actor_id = 2;
}
