syntax = "proto3";
package tutorial;

option go_package = "github.com/ebenaum/thekeeper/proto;proto";

message EventSeedActor {
   string handle = 1;
}
