syntax = "proto3";
package thekeeper;

option go_package = "github.com/ebenaum/thekeeper/proto;proto";

message EventSeedPlayer {
   string playerId = 1;
   string handle = 2;
}
